--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,37 @@
-anyio==3.6.2
-appnope==0.1.3
-asttokens==2.2.1
-attrs==22.2.0
-backcall==0.2.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-comm==0.1.3
-debugpy==1.6.6
-decorator==5.1.1
-dnspython==2.3.0
-exceptiongroup==1.1.1
-executing==1.2.0
-fastapi==0.95.0
-grpcio==1.53.0
-grpcio-tools==1.53.0
+annotated-types==0.6.0
+anyio==4.3.0
+black==24.3.0
+certifi==2024.2.2
+click==8.1.7
+dnspython==2.6.1
+email_validator==2.1.1
+fastapi==0.110.1
 h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==0.16.3
-httpx==0.23.3
-hyperframe==6.0.1
-idna==3.4
-importlib-metadata==6.1.0
-iniconfig==2.0.0
-ipykernel==6.22.0
-ipython==8.12.0
-jedi==0.18.2
-joblib==1.2.0
-jupyter_client==8.1.0
-jupyter_core==5.3.0
-matplotlib-inline==0.1.6
-motor==3.1.1
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 mypy-extensions==1.0.0
-nest-asyncio==1.5.6
-numpy==1.24.2
-packaging==23.0
-parso==0.8.3
-pathspec==0.11.1
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==3.2.0
-pluggy==1.0.0
-prompt-toolkit==3.0.38
-protobuf==4.22.1
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pydantic==1.10.7
-Pygments==2.14.0
-pymongo==4.3.3
-pytest==7.2.2
-pytest-asyncio==0.21.0
-python-dateutil==2.8.2
-python-dotenv==0.21.0
-pyzmq==25.0.2
-qdrant-client==1.1.1
-requests==2.28.2
-rfc3986==1.5.0
-scikit-learn==1.2.2
-scipy==1.10.1
-six==1.16.0
-sklearn==0.0.post1
-sniffio==1.3.0
-stack-data==0.6.2
-starlette==0.26.1
-threadpoolctl==3.1.0
-tomli==2.0.1
-tornado==6.2
-traitlets==5.9.0
-typing_extensions==4.5.0
-urllib3==1.26.15
-wcwidth==0.2.6
-zipp==3.15.0
+orjson==3.10.0
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.0
+pydantic==2.6.4
+pydantic-extra-types==2.6.0
+pydantic-settings==2.2.1
+pydantic_core==2.16.3
+python-dotenv==1.0.1
+python-multipart==0.0.9
+PyYAML==6.0.1
+ruff==0.3.5
+sniffio==1.3.1
+starlette==0.37.2
+typing_extensions==4.11.0
+ujson==5.9.0
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
