--- a/compose.yml
+++ b/compose.yml
@@ -5,8 +5,8 @@ services:
       dockerfile: ./.docker/Dockerfile
       context: .
     command: uvicorn app.main:app --host 0.0.0.0 --reload --port 8000
-    #volumes:
-     # - ./app:/app
+    volumes:
+      - ./app:/app
     ports:
       - "8000:8000"
     environment:
