--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
+ENV_STATE="dev" # or prod
+API_NAME="HK-2024-BE"
+API_DESCRIPTION="Backend for hack kosice 2024 project"
+API_VERSION="1.0.0"
+API_DEBUG_MODE=True
+OLLAMA_API_URL="https://ed32-13-95-17-251.ngrok-free.app"
 MONGO_URI=mongodb+srv://mongo-user:lK30SyUhSrIxND9Q@legacy-refactorer.bqdjbgf.mongodb.net/files?retryWrites=true&w=majority&appName=legacy-refactorer
+AZURE_OPENAI_KEY="df50a51e7d81496eb671058084fdd81c"
+AZURE_OPENAI_ENDPOINT="https://france-sommify-open-ai.openai.azure.com/"
+AZURE_OPENAI_MODEL_NAME_GPT4="gpt-4-32k-sommify"
