--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ black==24.3.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.1
 fastapi==0.110.1
@@ -19,6 +20,8 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 motor==3.4.0
 mypy-extensions==1.0.0
+numpy==1.26.4
+openai==1.16.2
 orjson==3.10.0
 packaging==24.0
 pathspec==0.12.1
@@ -36,6 +39,7 @@ ruff==0.3.5
 smmap==5.0.1
 sniffio==1.3.1
 starlette==0.37.2
+tqdm==4.66.2
 typing_extensions==4.11.0
 ujson==5.9.0
 urllib3==2.2.1
@@ -43,6 +47,3 @@ uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
-pydantic
-motor 
-openai
